# zap

./: Cargo.toml  PLAN.md  plan-realtime.md
.github/issue-triage/: triage-prompt.md
.github/workflows/: issue-reopen-on-not-duplicate.yml  issue-triage.yml
app/: Cargo.toml
app/i18n/en/: warp.ftl
app/i18n/ja/: warp.ftl
app/i18n/zh-CN/: warp.ftl
app/src/: lib.rs  root_view.rs
app/src/ai/agent/: api.rs  api_tests.rs
app/src/ai/agent_providers/: prompt_renderer.rs  reasoning.rs
app/src/code/: global_buffer_model.rs  view.rs
app/src/remote_server/: server_buffer_tracker.rs  server_model.rs
app/src/settings/: ai.rs  init.rs
app/src/settings_view/: about_page.rs  ai_page.rs  mod.rs  network_page.rs
app/src/ssh_manager/: onekey.rs  secret_injector.rs
app/src/terminal/: input.rs  view.rs
app/src/voice/: transcriber.rs
app/src/workspace/: view.rs
crates/http_client/src/: lib.rs  proxy.rs
crates/languages/src/: lib_tests.rs
crates/voice_input/: Cargo.toml
crates/voice_input/src/: lib.rs
crates/voice_transcription/: Cargo.toml
crates/voice_transcription/examples/: realtime_smoke.rs  sapi_smoke.rs
crates/voice_transcription/src/: lib.rs
crates/voice_transcription/src/imp/: fallback.rs  mod.rs  windows.rs  windows_realtime.rs
crates/voice_transcription/src/imp/windows_sapi/: audio.rs  com.rs  event.rs  mod.rs  phrase.rs  recognizer.rs
crates/warp_logging/src/: lib.rs  native.rs
crates/websocket/src/: proxy.rs
website/src/components/: LanguageSelect.astro
website/src/pages/: index.astro
website/src/styles/: docs.css  landing.css
(+10 files in other folders)
