[package]
name = "voice_input"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
instant = { workspace = true }
log = { workspace = true }
warpui.workspace = true
voice_transcription.workspace = true

[features]
# No features; compiled when the app enables its `voice` feature which depends on this crate
